<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:background="@drawable/top_bg"
          >
          
          <LinearLayout 
           android:id="@+id/layout_file_infor_fragment_bottom1"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:background="#b0999999"
           >
	           <Button 
	            android:id="@+id/btn_file_infor_fragment_edit"
	            android:layout_width="wrap_content"
	           	android:layout_height="fill_parent"
	           	android:text="@string/common_eidt"
	           	android:layout_weight="1.0"
	           	android:background="@drawable/view_item_selector"
	           	android:gravity="center"
	           	android:textSize="18dip"
	            />
	           
	           <Button 
	            android:id="@+id/btn_file_infor_fragment_create"
	            android:layout_width="wrap_content"
	           	android:layout_height="fill_parent"
	           	android:text="@string/common_create_dir"
	           	android:layout_weight="1.0"
	           	android:background="@drawable/view_item_selector"
	           	android:gravity="center"
	           	android:textSize="18dip"
	            />
	           
	           <Button 
	            android:id="@+id/btn_file_infor_fragment_search"
	            android:layout_width="wrap_content"
	           	android:layout_height="fill_parent"
	           	android:text="@string/common_search"
	           	android:layout_weight="1.0"
	           	android:background="@drawable/view_item_selector"
	           	android:gravity="center"
	           	android:textSize="18dip"
	            />
	           
	           <Button 
	            android:id="@+id/btn_file_infor_fragment_return"
	            android:layout_width="wrap_content"
	           	android:layout_height="fill_parent"
	           	android:text="@string/common_return"
	           	android:layout_weight="1.0"
	           	android:background="@drawable/view_item_selector"
	           	android:gravity="center"
	           	android:textSize="18dip"
	            />
       		</LinearLayout>
       <LinearLayout 
           android:id="@+id/layout_file_infor_fragment_bottom2"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:visibility="gone"
           android:orientation="horizontal"
           android:background="@drawable/top_bg"
           >
           <Button 
	            android:id="@+id/btn_file_infor_fragment_cancel"
	            android:layout_width="0dip"
	           	android:layout_height="fill_parent"
	           	android:text="@string/common_cancel"
	           	android:background="@drawable/view_item_selector"
	           	android:gravity="center"
	           	android:textSize="18dip"
	           	android:layout_weight="1.0"
	            />
           <View 
               android:layout_width="2dip"
               android:layout_height="fill_parent"
               android:background="@color/white"
               />
	       <HorizontalScrollView 
	           android:id="@+id/hs_file_infor_fagment_edit"
	           android:layout_width="0dip"
	           android:layout_height="fill_parent"
	           android:scrollbars="horizontal"
	           android:layout_weight="4.0"
	           android:scrollbarAlwaysDrawHorizontalTrack="true"
	           >
	           <LinearLayout 
		           android:layout_width="wrap_content"
		           android:layout_height="fill_parent"
		           >
		           <Button 
			            android:id="@+id/btn_file_infor_fragment_select_all"
			            android:layout_width="100dip"
			           	android:layout_height="fill_parent"
			           	android:text="@string/select_all"
			           	android:background="@drawable/view_item_selector"
			           	android:gravity="center"
			           	android:textSize="18dip"
			           	android:drawableLeft="@drawable/btn_to_left"
			            />
		           <Button 
		                android:id="@+id/btn_file_infor_fragment_delete"
		                android:layout_width="100dip"
			           	android:layout_height="fill_parent"
			           	android:text="@string/edit_delete"
			           	android:background="@drawable/view_item_selector"
			           	android:gravity="center"
			           	android:textSize="18dip"
		               />
		           <Button 
			            android:id="@+id/btn_file_infor_fragment_copy"
			            android:layout_width="100dip"
			           	android:layout_height="fill_parent"
			           	android:text="@string/edit_copy"
			           	android:background="@drawable/view_item_selector"
			           	android:gravity="center"
			           	android:textSize="18dip"
		               />
		           
		           <Button 
		               android:id="@+id/btn_file_infor_fragment_cut"
		               android:layout_width="100dip"
			           	android:layout_height="fill_parent"
			           	android:text="@string/edit_cut"
			           	android:background="@drawable/view_item_selector"
			           	android:gravity="center"
			           	android:textSize="18dip"
		               />
		           <Button 
			            android:id="@+id/btn_file_infor_fragment_zip"
			            android:layout_width="100dip"
			           	android:layout_height="fill_parent"
			           	android:text="@string/edit_zip"
			           	android:background="@drawable/view_item_selector"
			           	android:gravity="center"
			           	android:textSize="18dip"
			           	android:drawableRight="@drawable/btn_to_right"
			            />
		           
		       </LinearLayout>
		     </HorizontalScrollView>
	     </LinearLayout>
	 </LinearLayout>
</LinearLayout>