<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:id="@+id/dialog_infor_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    	android:layout_marginLeft="30dip"
    	android:layout_marginRight="30dip"
    	android:layout_marginTop="80dip"
    	android:layout_marginBottom="80dip"
    	android:background="@drawable/style_dialog_bg"
        >
        <TextView 
            android:id="@+id/tv_dialog_infor_title"
            android:layout_width="fill_parent"
        	android:layout_height="30dip"
    		android:layout_marginTop="10dip"
    		android:layout_marginBottom="10dip"
        	android:textSize="25dip"
        	android:gravity="center"
            />
        <ScrollView 
            android:id="@+id/sv_dialog_infor"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_below="@+id/tv_dialog_infor_title"
        	android:layout_above="@+id/btn_dialog_infor_confirm"
			android:scrollbars="none"
            >
            <LinearLayout 
                android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:orientation="vertical"
                >
                <TextView 
		            android:id="@+id/tv_dialog_infor_content1"
		            android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dip"
		    		android:layout_marginRight="10dip"
		        	android:textSize="18dip"
		        	android:textStyle="italic"
		        	android:text="@string/help_infor1"
		            />
		        <TextView 
		            android:id="@+id/tv_dialog_infor_content2"
		            android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dip"
		    		android:layout_marginRight="10dip"
		    		android:layout_marginTop="5dip"
		        	android:textSize="18dip"
		        	android:textStyle="italic"
		        	android:text="@string/help_infor2"
		            />
		        <TextView 
		            android:id="@+id/tv_dialog_infor_content3"
		            android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dip"
		    		android:layout_marginRight="10dip"
		    		android:layout_marginTop="5dip"
		        	android:textSize="18dip"
		        	android:textStyle="italic"
		        	android:text="@string/help_infor3"
		            />
		        <TextView 
		            android:id="@+id/tv_dialog_infor_content4"
		            android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dip"
		    		android:layout_marginRight="10dip"
		    		android:autoLink="email|phone|web" 
		        	android:textSize="18dip"
		        	android:textStyle="italic"
		        	android:text="@string/help_infor4"
		            />
		        <TextView 
		            android:id="@+id/tv_dialog_infor_content5"
		            android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dip"
		    		android:layout_marginRight="10dip"
		    		android:layout_marginTop="5dip"
		        	android:textSize="18dip"
		        	android:textStyle="italic"
		        	android:text="@string/help_infor5"
		            />
		        <TextView 
		            android:id="@+id/tv_dialog_infor_content6"
		            android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:autoLink="email|phone|web" 
		        	android:layout_marginLeft="10dip"
		    		android:layout_marginRight="10dip"
		        	android:textSize="18dip"
		        	android:textStyle="italic"
		        	android:text="@string/help_infor6"
		            />
		        <TextView 
		            android:id="@+id/tv_dialog_infor_content7"
		            android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_marginBottom="10dip"
		        	android:gravity="center_horizontal"
		        	android:layout_marginLeft="10dip"
		    		android:layout_marginRight="10dip"
		    		android:layout_marginTop="5dip"
		        	android:textSize="18dip"
		        	android:textStyle="italic"
		        	android:text="@string/help_infor7"
		            />
            </LinearLayout>
        </ScrollView>
        
        <View 
	        android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="@color/separator"
	        android:layout_above="@+id/btn_dialog_infor_confirm"
	        />
        <Button 
	        android:id="@+id/btn_dialog_infor_confirm"
	        android:layout_width="fill_parent"
	        android:layout_height="45dip"
	        android:text="@string/common_next"
	        android:textSize="18dip"
	        android:layout_alignParentBottom="true"
	        android:background="@drawable/selector_button_bg"
	        />
    </RelativeLayout>

</LinearLayout>